Refine push device lifecycle
